# Linux-Arctis-Manager

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
docs/: device_configuration_file_specs.md
src/devices/: nova_pro_wireless.yaml
src/linux_arctis_manager/: cli_tools.py  config.py  constants.py  core.py  dbus_service.py  device_settings.py  i18n.py  pactl.py  settings.py  status_parser_fn.py  systemd.py  usb_devices_monitor.py  utils.py
src/linux_arctis_manager/desktop/: ArctisManager.desktop  ArctisManagerSystray.desktop
src/linux_arctis_manager/devices/: arctis_7_plus.yaml  nova_5.yaml  nova_7_wireless_discrete_battery.yaml  nova_7_wireless_perc_battery.yaml  nova_pro_wired.yaml  nova_pro_wireless.yaml
src/linux_arctis_manager/gui/: base_app.py  dbus_wrapper.py  main_app.py  settings_widget.py  status_widget.py  systray_app.py
src/linux_arctis_manager/gui/qt_widgets/: q_checkable_button_group.css  q_checkable_button_group.py  q_dual_state.py  q_toggle.py
src/linux_arctis_manager/lang/: en.ini
src/linux_arctis_manager/scripts/: cli.py  daemon.py  dbus_awake.py  gui.py
src/linux_arctis_manager/typing/: protocols.py
tests/: test_config.py
tests/linux_arctis_manager/: test_cli_tools.py  test_config.py
tests/linux_arctis_manager/scripts/: test_daemon.py
